app/assets/stylesheets/jpstudy/shared.scss
html {
  font-family: 'Roboto', Arial, Helvetica, sans-serif;
  font-size: 1.05em;
  color: #1F2937;
  body { margin: 0px; }
}

nav {
  position: relative;
  background-color: #374151;
  height: 50px;
  // == extra-extra large box shadow
  // box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
  // == extra large box shadow
  // box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
  // == large box shadow
  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
  // == medium box shadow
  // box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
  a, button {
    float: left;
    color: white;
    text-align: center;
    padding: 6px 12px;
    text-decoration: none;
    font-size: 1em;
    background-color: #374151;
    border: none;
    &:hover {
      background-color: #1F2937;
    }
    display: flex;
    flex-direction: column;
    align-items: center;
    .icon-subtext {
      font-size: 0.7em;
    }
  }
  .left-links {
    .dropdown-menu {
      visibility: hidden;
      .hamburger {
        justify-content: center;
        height: 50px;
      }
      .dropdown-content {
        display: none;
        position: absolute;
        top: 50px;
        min-width: 160px;
        box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
        z-index: 100;
        padding-bottom: 2px;
        background-color: #374151;
        a {
          float: none;
          display: flex;
          flex-direction: row;
          .icon-subtext {
            margin-left: 8px;
            font-size: 0.9em;
          }
        }
      }
      &:hover .dropdown-content,
      &:active .dropdown-content {
        display: block;
      }
    }
  }
  .center-links {
    float: none;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: fit-content;
  }
  .right-links {
    float: right;
    width: fit-content;
    form, button {
      font-size: 1em !important;
    }
  }
  @media (max-width: 500px) {
    .center-links {
      visibility: hidden;
    }
    .left-links .dropdown-menu {
      visibility: visible;
    }
  }
}

main {
  display: flex;
  width: 100%;
  justify-content: center;
  min-height: calc(100vh - 100px); // height of both navbars
  .page-content {
    padding: 12px 12px 24px 12px;
    width: 700px;
  }
}

footer {
  position: relative;
  overflow: hidden;
  background-color: white;
  height: 50px;
  font-size: 0.9em;
  @media (max-width: 700px) {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: fit-content;
  }
  span {
    @extend .light-gray;
    background-color: inherit;
    padding: 6px 12px;
  }
  a {
    @extend .light-gray;
    float: left;
    text-align: center;
    margin: 0px 12px;
    text-decoration: none;
    background-color: inherit;
    border: none;
  }
  .left-links {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }
  .center-links {
    float: none;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    height: 100%;
    display: flex;
    align-items: center;
  }
  .right-links {
    float: right;
    @media (max-width: 700px) {
      display: none;
    }
  }
  @media (max-width: 700px) {
    .left-links,
    .center-links {
      position: relative;
      display: flex;
      justify-content: center;
      align-items: center;
      float: none;
      transform: none;
      top: 0;
      left: 0;

    }
    .center-links {
      padding: 4px 0px 16px 0px;
    }
  }
}

.flash {
  color: white;
  a { color: white; }
  border-radius: 4px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  margin-bottom: 8px;
  &:last-child {
    margin-bottom: 25px;
  }
  .message {
    padding: 16px 20px;
    margin: 0px;
  }
  &.alert {
    background-color: #DC2626;
  }
  &.notice {
    background-color: #F59E0B;
  }
  &.success {
    background-color: #34D399;
  }
  .close-flash-button {
    -webkit-appearance: none;
    color: #111827;
    background-color: rgba(243, 244, 246, 0.5); // #F3F4F6
    border: none;
    opacity: 0.6;

    border-radius: 50px;
    width: fit-content;
    height: fit-content;
    display: flex;
    align-items: center;
    justify-content: center;
    float: right;
    padding: 2px;
    margin: 4px;

    &:hover {
      cursor: pointer;
      opacity: 1;
    }
    .icon-solid {
      height: 16px;
    }
  }
}

.info-icon {
  @extend .light-gray;
}

.contents-vertically-centered {
  display: flex;
  flex-direction: row;
  align-content: center;
}

.link-blue {
  color: #3B82F6;
}

.light-gray {
  color: #9CA3AF;
}

.alert-red {
  color: #DC2626;
}

.success-green {
  color: #10B981;
}

hr {
  height: 2px;
  background-color: #E5E7EB;
  border: none;
}

.hidden {
  display: none;
}

